--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li class="nav-item ">
             <a class="nav-link " aria-current="page" href="#">
               Features
-              <i class="rotat  fa-solid fa-angle-down"></i>
+              <i class="rotat  fa-solid fa-angle-up"></i>
             </a>
             
             <ul class="menutag feat_show ">
@@ -57,7 +57,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#" >
               Company
-              <i class=" fa-solid fa-angle-down rotat"></i>
+              <i class=" fa-solid fa-angle-up rotat"></i>
             </a>
             <ul class="menutag comp_show " >
               <li>
@@ -94,7 +94,7 @@
   <div class="header  pt-5 mb-5 pb-5">
     <div class="row  ">
       <div class=" col-12 col-lg-8">
-        <h2 class="mt-sm-5 mt-md-5">Make remote work</h2>
+        <h2>Make remote work</h2>
         <p>
           Get your team in sync, no matter your location. Streamline processes, 
           create team rituals, and watch productivity soar.
